crops overflow-x to avoid horizontal scrollbars

--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -16,6 +16,7 @@ body {
   font-family: 'Public Sans', sans-serif;
   font-size: $font-sm;
   color: $grayishBlue;
+  overflow-x: hidden;
 
   &.noscroll {
     overflow: hidden;
